k8s/addons/localstack/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: localstack
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: localstack
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 4566}
  egress: []
